--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "files": ["load.environment.php"]
     },
     "scripts": {
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
         "pre-install-cmd": [
             "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
         ],
