--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         ]
     },
     "extra": {
+        "enable-patching": true,
         "composer-exit-on-patch-failure": true,
         "patchLevel": {
             "drupal/core": "-p2"
