--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,24 @@
         "php": ">=7.0.8",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
-        "drupal/console": "^1.0.2",
+        "drupal/admin_toolbar": "^2.0",
+        "drupal/console": "~1.0",
+        "drupal/content_browser": "^1.0@alpha",
         "drupal/core": "^8.8.1",
         "drupal/core-composer-scaffold": "^8.8.0",
-        "drush/drush": "^9.7.1 | ^10.0.0",
+        "drupal/devel": "^2.0",
+        "drupal/facets": "^1.3",
+        "drupal/matomo": "^1.7",
+        "drupal/pdf": "1.x-dev",
+        "drupal/rdfui": "^1.0-beta1",
+        "drupal/rest_oai_pmh": "^1.0",
+        "drupal/restui": "^1.16",
+        "drupal/search_api_solr": "^2.0",
+        "drush/drush": "^9.0",
+        "islandora-rdm/islandora_fits": "dev-master",
+        "islandora/carapace": "dev-8.x-3.x",
+        "islandora/islandora_defaults": "dev-8.x-1.x",
+        "islandora/openseadragon": "dev-8.x-1.x",
         "vlucas/phpdotenv": "^4.0",
         "webflo/drupal-finder": "^1.0.0",
         "zaporylie/composer-drupal-optimizations": "^1.0"
