From isle-dc issue #68, added missing solarium and symfony dependencies to composer.json

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,8 @@
         "islandora/carapace": "dev-8.x-3.x",
         "islandora/islandora_defaults": "dev-8.x-1.x",
         "islandora/openseadragon": "dev-8.x-1.x",
+        "solarium/solarium": "^5.1",
+        "symfony/event-dispatcher": "4.3.4 as 3.4.99",
         "vlucas/phpdotenv": "^4.0",
         "webflo/drupal-finder": "^1.0.0",
         "zaporylie/composer-drupal-optimizations": "^1.0"
